added code to copy in installPackages.R if its not already there but a r.package.info is present

--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -3,6 +3,7 @@ FROM docker
 
 COPY scripts/*.sh /usr/local/bin/
 COPY scripts/*.py /usr/local/bin/
+COPY scripts/*.R /usr/local/bin/
 
 RUN apk update && \
     apk upgrade && \  
